feat: made the building the streaming functionality.

--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.59.3",
     "@clerk/nextjs": "^6.36.7",
+    "@langchain/anthropic": "^0.3.18",
+    "@langchain/core": "^0.3.45",
+    "@langchain/groq": "^0.2.2",
+    "@langchain/langgraph": "^0.2.64",
     "@radix-ui/react-slot": "^1.2.4",
+    "@wxflows/sdk": "^2.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "convex": "^1.31.4",
-    "lucide-react": "^0.562.0",
+    "convex": "^1.23.0",
+    "langchain": "^0.3.22",
+    "lucide-react": "^0.563.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
