--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "langchain": "^0.3.22",
     "lucide-react": "^0.563.0",
     "next": "16.1.1",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
